--- a/css/index.css
+++ b/css/index.css
@@ -105,7 +105,7 @@ body{
   width: 100vw;
   height: 100vh;
 
-  background-image: url(../images/background.png);
+  background-image: url(../css/background.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center bottom;
@@ -506,3 +506,4 @@ h1{
         page-break-after: avoid;
     }
 }
+
